src/stories/accordion/Accordion.module.scss
.default {
    color: var(--pte-new-colors-contentPrimary);
    border-bottom: 1px solid var(--pte-new-colors-borderMedium);
    cursor: pointer;
    transition: all var(--pte-animations-duration-relaxed) var(--pte-animations-timing-easeInOutExpo);

    //&:hover {
    //    background-color: var(--pte-colors-backgroundSecondary);
    //}

    .title {
        padding: 16px 0;
        display: flex;
        justify-content: space-between;
        align-items: center;
        font-size: 16px;
        font-weight: var(--pte-typography-fontWeights-medium);

        border-bottom: 1px solid transparent;
        transition: border-bottom-color var(--pte-animations-duration-gradual) var(--pte-animations-timing-easeInOutExpo);
        &.open {
            border-bottom-color: var(--pte-new-colors-borderMedium);
        }
    }

    .plusIcon {
        margin-left: 4px;

        svg {
            transition: transform var(--pte-animations-duration-gradual) var(--pte-animations-timing-easeInOutExpo);
            transform: rotate(0);
            width: 16px;
            height: 16px;
        }

        svg.open {
            transform: rotate(135deg) !important;
        }
    }

    .dropdown {
        display: grid;
        grid-template-rows: 0fr;
        opacity: 0;
        cursor: auto;
        transition:
            grid-template-rows 800ms cubic-bezier(0.87, 0, 0.13, 1),
            opacity 800ms cubic-bezier(0.87, 0, 0.13, 1);

        &.open {
            grid-template-rows: 1fr;
            opacity: 1;
        }
    }

    .dropdownContent {
        min-height: 0;
        overflow: hidden;
        padding: 12px;
        display: flex;
        flex-direction: column;
        gap: 12px;
        background-color: var(--pte-new-colors-overlaySubtle);
    }
}

.card {
    color: var(--pte-new-colors-contentPrimary);
    border: 1px solid var(--pte-new-colors-borderStrong);
    border-radius: var(--pte-new-borders-radius-roundedMedium);
    background: var(--pte-new-colors-surfacePrimary);
    cursor: pointer;
    transition: var(--pte-animations-interaction);

    &.open {
        border-color: var(--pte-new-colors-borderUltrastrong);
    }

    .title {
        padding: 10px 12px;
        display: flex;
        justify-content: space-between;
        align-items: center;
        gap: 10px;
        background-color: var(--pte-new-colors-overlayWhiteSubtle);

        border-bottom: 1px solid transparent;
        transition: var(--pte-animations-interaction);

        &.large {
            padding: 14px 16px;
        }

        &.open {
            background-color: var(--pte-new-colors-overlayMedium);
            border-bottom-color: var(--pte-new-colors-borderStrong);
        }

        &:hover {
            background-color: var(--pte-new-colors-overlayStrong);
        }
    }

    .chevron {
        padding: 2px;
        transition: transform var(--pte-animations-duration-gradual) var(--pte-animations-timing-easeInOutExpo);
        transform: rotate(90deg);

        &.open {
            transform: rotate(-90deg);
        }
    }

    .dropdown {
        display: grid;
        grid-template-rows: 0fr;
        opacity: 0;
        cursor: auto;
        transition:
            grid-template-rows 800ms cubic-bezier(0.87, 0, 0.13, 1),
            opacity 800ms cubic-bezier(0.87, 0, 0.13, 1);

        &.open {
            grid-template-rows: 1fr;
            opacity: 1;
        }
    }

    .dropdownContent {
        min-height: 0;
        overflow: hidden;
        padding: 12px;
        display: flex;
        flex-direction: column;
        gap: 12px;
        background-color: var(--pte-new-colors-overlayWhiteSubtle);

        &.large {
            padding: 16px;
            gap: 16px;
        }
    }
}

